# rt-cinfer-web

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
benchmarks/: run_synthetic.py
configs/: us_ecommerce_origins.csv
data/: README.md
data/real/: README.md
data/samples/: synthetic_web_vitals_sample.csv
docs/: algorithms.md  api.md  api_reference.md  architecture.md  benchmarking.md  carbon-accounting.md  datasets.md  energy-model.md  experiments.md  overview.md  petition_alignment_note.md  real_public_data.md  references.bib  research_protocol.md  results-template.md  roadmap.md  theoretical_framework.md  threat-model.md
examples/: quickstart.py  streaming_demo.py
notebooks/: 01_synthetic_streaming_demo.ipynb
results/real_public_observational/: README.md
scripts/: fetch_crux_history_template.py  fetch_pagespeed_crux.py  generate_synthetic_stream.py  run_real_public_observational.py
src/rt_cinfer_web/: __init__.py  cli.py  config.py  pipeline.py  utils.py
src/rt_cinfer_web/abtest/: __init__.py  counterfactual.py  policy.py
src/rt_cinfer_web/data/: __init__.py  public_web_vitals.py  real_observational.py  synthetic.py
src/rt_cinfer_web/estimators/: __init__.py  models.py  online_dr.py
src/rt_cinfer_web/scm/: __init__.py  graph.py  identifiability.py  iv.py  structural.py
tests/: test_graph.py  test_online_dr.py  test_pipeline.py  test_real_public_data.py  test_synthetic.py
(+10 files in other folders)
