[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rt-cinfer-web"
version = "0.2.0"
description = "Real-time causal inference for e-commerce Web Vitals optimization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Han Lin"}
]
keywords = ["causal inference", "web vitals", "online learning", "e-commerce", "A/B testing", "SCM", "CrUX", "PageSpeed Insights"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "mypy>=1.7",
]
notebook = [
  "jupyter>=1.0",
  "matplotlib>=3.7",
]

[project.scripts]
rt-cinfer-web = "rt_cinfer_web.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
